Fixed the overflow on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ html {
 body {
   overflow-x: hidden;
   background-color: #fcfcfc;
+  min-height: 100vh;
 }
 
 nav {
@@ -34,7 +35,7 @@ nav {
   font-family: var(--font-mono);
 }
 
-.header{
+.header {
   margin-left: 0rem;
 }
 
@@ -43,7 +44,6 @@ nav {
   margin-left: 2rem;
   font-size: 1.3rem;
 }
-
 
 .navbar__navlinks {
   display: flex;
@@ -241,7 +241,7 @@ nav {
   position: absolute;
 }
 
-.work_card__link svg path:hover{
+.work_card__link svg path:hover {
   stroke: var(--color-primary);
 }
 .work_card__title:hover {
@@ -343,7 +343,6 @@ nav {
   text-decoration: none;
 }
 
-
 .social-icons--github {
   text-decoration: none;
 }
@@ -388,14 +387,14 @@ nav {
 
 /* Browser Scrollbar Styling */
 
-::-webkit-scrollbar{
-  width: .5rem;
-  border-radius: .5rem;
+::-webkit-scrollbar {
+  width: 0.5rem;
+  border-radius: 0.5rem;
   background-color: lavenderblush;
 }
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background-color: rgb(173, 173, 239);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
 }
 /* Sticky functionality */
 .sticky {
@@ -404,18 +403,17 @@ nav {
   width: 100vw;
   z-index: 999;
   background-color: white;
-  opacity: .9;
-  box-shadow: 1px 1px 5px -2px rgba(0,0,0,0.75);
+  opacity: 0.9;
+  box-shadow: 1px 1px 5px -2px rgba(0, 0, 0, 0.75);
   transition: all 1s ease;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
 }
 
-
 /* Feature queries */
 
 @supports (backdrop-filter: blur(10px)) {
-  .sticky{
+  .sticky {
     backdrop-filter: blur(10px);
   }
 }
@@ -448,27 +446,29 @@ nav {
     margin-left: 2rem;
   }
 
-  .footer-copyright{
+  .footer-copyright {
     margin-left: 2rem;
   }
 
-  .social-icons{
+  .social-icons {
     margin-left: 2rem;
   }
 
-  .work_card__grid{
+  .work_card__grid {
     margin-left: 0;
   }
 
-  .contact__description{
+  .contact__description {
     margin-left: 2rem;
   }
 
-  .footer-copyright, .social-icons, .contact__button{
+  .footer-copyright,
+  .social-icons,
+  .contact__button {
     margin-left: 2rem;
   }
 
-  .header{
+  .header {
     margin-left: 0;
   }
 }
@@ -483,8 +483,8 @@ nav {
   }
 
   .navbar__navlinks {
-    position: absolute;
-    right: 0px;
+    position: fixed;
+    right: 0;
     height: 100vh;
     top: 8vh;
     background-color: #fcfcfc;
@@ -507,17 +507,15 @@ nav {
   }
 
   .about__description {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
   }
 
   .work__title {
     margin-left: 12rem;
   }
-
 }
 
 @media screen and (max-width: 600px) {
-
   .work_card__grid {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -571,12 +569,31 @@ nav {
     margin-left: 2rem;
   }
 
-  .header{
-  margin-left: 0;
-}
+  .header {
+    margin-left: 0;
+  }
 }
 .nav-active {
   transform: translateX(0%);
+  /* position: fixed;
+  top: 4rem;
+  z-index: 999;
+  background-color: white;
+  opacity: 0.9;
+  box-shadow: 1px 1px 5px -2px rgba(0, 0, 0, 0.75);
+  transition: all 1s ease;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px); */
+}
+
+@media screen and (min-width: 390px) {
+  .wrapper {
+    overflow-x: hidden;
+  }
+
+  .work_card {
+    width: 75%;
+  }
 }
 
 @keyframes navLinkFade {
